tests/snapshots/otlp_metrics_request_golden__otlp_multiple_scopes_metrics_request.snap
---
source: tests/otlp_metrics_request_golden.rs
expression: scrubbed
---
{
  "content_type": "application/x-protobuf",
  "export_request": {
    "resource_attributes": {
      "service.name": "multi-scope-test",
      "service.version": "0.1.0"
    },
    "scope_metrics": [
      {
        "metrics": [
          {
            "data_points": [
              {
                "attributes": {
                  "worker_id": "0"
                },
                "time_unix_nano": "[TIMESTAMP]",
                "value": 1000
              }
            ],
            "description": "Scheduler tick count",
            "name": "runtime.scheduler.ticks",
            "type": "counter",
            "unit": "1"
          }
        ],
        "scope": {
          "name": "asupersync::runtime",
          "version": "0.3.1"
        }
      },
      {
        "metrics": [
          {
            "data_points": [
              {
                "attributes": {
                  "method": "GET",
                  "route": "/health"
                },
                "bucket_counts": [
                  20,
                  5,
                  0,
                  0
                ],
                "count": 25,
                "explicit_bounds": [
                  0.1,
                  1.0,
                  10.0
                ],
                "sum": 12.5,
                "time_unix_nano": "[TIMESTAMP]"
              }
            ],
            "description": "HTTP request duration",
            "name": "http.server.duration",
            "type": "histogram",
            "unit": "s"
          }
        ],
        "scope": {
          "name": "asupersync::http",
          "version": "0.3.1"
        }
      }
    ]
  },
  "otlp_version": "1.0.0",
  "scrubbed_fields": [
    "time_unix_nano",
    "process.pid",
    "host.name"
  ]
}
